# lerobot_trossen

./: .gitignore  README.md  pyproject.toml  uv.lock.backup
scripts/: deploy.sh  gpu_check.py  record.sh  schema_check.py  schema_fix.py  train.sh
