[project]
name = "lerobot-trossen"
version = "0.1.0"
description = "Trossen Robotics LeRobot integration"
requires-python = ">=3.10"

dependencies = [
  "huggingface-hub>=0.35.3",
  "lerobot_robot_trossen>=0.1.0",
  "lerobot_teleoperator_trossen>=0.1.0",
  "trossen-slate>=0.0.3",
  "torch",
  "torchvision",
  "torchaudio",
  "lerobot>=0.4.0",
  "datasets>=4.7.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
# torch関連を強制的にcu128インデックスに紐付けます
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

lerobot_robot_trossen = { workspace = true }
lerobot_teleoperator_trossen = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
combine-as-imports = true